--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@
   },
   "before_install": [
     "export DISPLAY=:99.0",
-    """sh -e /etc/init.d/xvfb start"
+    "sh -e /etc/init.d/xvfb start"
   ],
   "script": [
     "npm run build",
